--- a/styles/style.css
+++ b/styles/style.css
@@ -588,12 +588,12 @@ body .timer3 {
 }
 body .timer-toggle {
   position: relative;
-  inline-size: 48px;
-  block-size: 48px;
+  min-width: auto;
+  min-height: auto;
   display: inline-grid;
   place-items: center;
 }
-body .timer-toggle .icon {
+body .timer-toggle span {
   grid-area: 1/1;
   width: 100%;
   height: 100%;
